<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".table">
    <TableRow
        android:paddingTop="10dp"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_span="2"
            android:text="@string/login"
            android:textColor="#890000"
            android:textSize="25sp"
            android:textStyle="bold"/>

    </TableRow>

    <TableRow
        android:layout_marginTop="20dip">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/username"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginLeft="20dip"/>

        <EditText
            android:id="@+id/screenName"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_weight="1"/>

    </TableRow>

    <TableRow
        android:layout_marginTop="20dip">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginLeft="20dip"/>

        <EditText
            android:id="@+id/password"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_weight="1"/>

    </TableRow>

    <TableRow
        android:gravity="center"
        android:layout_marginTop="20dip">

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/submit"/>

    </TableRow>

</TableLayout>